# RingForge

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
analyzer/: beat.py  energy.py  heatmap.py  metadata.py  repetition.py  scorer.py
app/: cli.py
audio/: effects.py  export.py  trim.py
config/: config.toml
core/: cache.py  config.py  logging.py  waveform.py
docs/: LICENSE_TEMPLATE
downloader/: ytdl.py
tests/: conftest.py  test_cli.py  test_export.py  test_heatmap.py  test_scorer.py  test_trim.py
ui/: main_window.py  player.py  waveform_widget.py  worker.py
